# optimer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  ap_solver.hpp  defs.h  ftv35.data  load_balancer.h  main.cpp  parallel_bnb.hpp  sequence_bnb.hpp  stats.hpp  timer.hpp  tree.hpp  tsp.hpp  utils.cmake
config/: default.ini  default_stsp.ini  ftv38_llr.ini  ftv38_lpr.ini
contrib/: build_env.sh  cppunit.sh
contrib/UnitTest++/: CMakeLists.txt  README
contrib/UnitTest++/src/: TestReporterTeamCity.cpp  TestReporterTeamCity.h  TestRunnerTeamCity.cpp  TestRunnerTeamCity.h
contrib/UnitTest++/src/tests/: Main.cpp  TestTest.cpp  TestTestRunner.cpp
contrib/cppunit_teamcity/: CMakeLists.txt
contrib/g2log/: CMakeLists.txt
contrib/g2log/src/: g2future.h  g2logworker.cpp
data/: lmsc1963.atsp
data/stsp/: nasini12.tsp  solutions
src/: algo_string.h  allocator-inl.h  allocator.h  ap_solver.h  ap_solver.hpp  atsp.cpp  bnb.h  bnb.hpp  data_loader.cpp  data_loader.h  defs.h  giving_scheduler.h  ini_file.cpp  ini_file.h  load_balancer.h  main.cpp  openmp_bnb.hpp  parallel_bnb-inl.h  parallel_bnb.h  parallel_bnb.hpp  requesting_scheduler.h  scheduler_common.h  sequence_bnb-inl.h  sequence_bnb.h  sequence_bnb.hpp  serial_bnb-inl.h  serial_bnb.h  simple_atsp.cpp  simple_stsp.cpp  solver_provider.h  solver_provider.hpp  stats.cpp  stats.h  stsp.cpp  timer.h  tree-inl.h  tree.h  tree.hpp  tsp.cpp  tsp.h  (+1 more)
src/bnb/: CMakeLists.txt  bnb.h  defs.h  giving_scheduler.h  locked_tree.h  mt_tree.h  parallel_bnb-inl.h  parallel_bnb.h  requesting_scheduler.h  scheduler_common.h  serial_bnb-inl.h  serial_bnb.h  simple_bnb-inl.h  simple_bnb.h  stats.cpp  stats.h  tree-inl.h  tree.h
src/common/: CMakeLists.txt  algo_string.cpp  algo_string.h  allocator-inl.h  allocator.h  geometry2d.cpp  geometry2d.h  ini_file.cpp  ini_file.h  log.cpp  log.h  nullptr.h  resource_utilization.cpp  resource_utilization.h  signals.cpp  signals.h  stats.cpp  stats.h  timer.h  triple.h  unix_time_utils.cpp  unix_time_utils.h  unix_timer.cpp  unix_timer.h
src/heuristics/: CMakeLists.txt
src/heuristics/aco/: CMakeLists.txt  aco_tsp.cpp
src/heuristics/aco/tsp/: CMakeLists.txt  aco.cpp  aco.h  ant.cpp  ant.h  params.cpp  params.h
src/tsp/: CMakeLists.txt
src/tsp/assymetric/: ap_solver.h  data_loader.cpp  data_loader.h  tsp.h
src/tsp/asymmetric/: CMakeLists.txt  ap_solver.h  data_loader.h  tsp.cpp  tsp.h
src/tsp/common/: CMakeLists.txt  config.h  data_loader.cpp  data_loader.h  types.cpp  types.h
src/tsp/symmetric/: CMakeLists.txt  common.cpp  common.h  lagrangean.cpp  lagrangean.h  lagrangean_stsp.cpp  lagrangean_stsp.h  ms_one_tree-inl.h  ms_one_tree.cpp  ms_one_tree.h  stsp.cpp  stsp.h
tests/: aco_tsp.cpp  algo_string.cpp  ap.cpp  atsp.cpp  err.txt  ini_file.cpp  main.cpp  ms_one_tree.cpp  simple_atsp.cpp  simple_stsp.cpp  stsp.cpp  stsp_lagrangean.cpp  tsp.h
tools/: config.yaml  config_generator.py  cpplint.py  pms.py  pms_report.py  run_tests.sh  settings.yaml  settings_generator.py  settings_parallel.yaml  settings_parallel_records.yaml  static_checker.sh
